# Humentity

./: .gitattributes  Cargo.toml  README.md
assets/body_parts/Eyes/Eyeballs/: LeftEye-LowPolyEyeball.mhclo  RightEye-LowPolyEyeball.mhclo
assets/body_parts/eyes/Eyeballs/: low-poly.mtl
assets/body_parts/eyes/high-poly/: high-poly.mtl
assets/body_parts/eyes/low-poly/: low-poly.mhclo
assets/clothes/underwear/simple_bra/: simple_bra.mhclo
assets/clothes/underwear/simple_briefs/: simple_briefs.mhclo
src/: animation.rs  assets.rs  basemesh.rs  global_config.rs  lib.rs  main.rs  mesh_ops.rs  mhclo.rs  morphs.rs  rigs.rs
